--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,20 @@ services:
       dockerfile: nginx/Dockerfile
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
       - backend
+    volumes:
+      - certbot_etc:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
+    restart: unless-stopped
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - certbot_etc:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do sleep 12h & wait $${!}; certbot renew --webroot -w /var/www/certbot; done'"
     restart: unless-stopped
 
   mysql:
@@ -35,3 +47,5 @@ services:
 
 volumes:
   mysql_data:
+  certbot_etc:
+  certbot_www:
