--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,9 +11,30 @@ http {
 	sendfile on;
 	keepalive_timeout 65;
 
+	# ACME challenges
 	server {
 		listen 80;
-		server_name _;
+		server_name infjew.com www.infjew.com dashboard.infjew.com;
+
+		location /.well-known/acme-challenge/ {
+			root /var/www/certbot;
+		}
+
+		location / {
+			return 301 https://$host$request_uri;
+		}
+	}
+
+	server {
+		listen 443 ssl;
+		server_name infjew.com www.infjew.com dashboard.infjew.com;
+
+		ssl_certificate /etc/letsencrypt/live/infjew.com/fullchain.pem;
+		ssl_certificate_key /etc/letsencrypt/live/infjew.com/privkey.pem;
+		ssl_session_cache shared:SSL:10m;
+		ssl_session_timeout 10m;
+		ssl_protocols TLSv1.2 TLSv1.3;
+		ssl_prefer_server_ciphers on;
 
 		root /usr/share/nginx/html;
 		index index.html;
