--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -85,7 +85,7 @@ http {
 			try_files /admin/login.html =404;
 		}
 
-		location = / { 
+		location = / {
 			auth_request /api/session/require;
 			try_files /admin/index.html =404;
 		}
@@ -107,10 +107,10 @@ http {
 			proxy_set_header X-Forwarded-Proto $scheme;
 		}
 
-		# All other paths: enforce auth, then serve without .html
+		# All other paths: map to /admin/* files without .html
 		location / {
 			auth_request /api/session/require;
-			try_files $uri $uri/ $uri.html /admin/index.html;
+			try_files /admin$uri /admin$uri/ /admin$uri.html /admin/index.html;
 		}
 	}
 }
