--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -85,18 +85,18 @@ http {
 			try_files /admin/login.html =404;
 		}
 
-		location = / {
+		# Admin static assets (no auth, to render login page too)
+		location ^~ /css/ { root /usr/share/nginx/html/admin; try_files $uri =404; }
+		location ^~ /js/ { root /usr/share/nginx/html/admin; try_files $uri =404; }
+		location ^~ /vendor/ { root /usr/share/nginx/html/admin; try_files $uri =404; }
+		location ^~ /fonts/ { root /usr/share/nginx/html/admin; try_files $uri =404; }
+		location ^~ /images/ { root /usr/share/nginx/html/admin; try_files $uri =404; }
+
+		location = / { 
 			auth_request /api/session/require;
 			try_files /admin/index.html =404;
 		}
 		location = /index { return 302 /; }
-
-		# Admin static paths (protected, internal)
-		location ^~ /admin/ {
-			auth_request /api/session/require;
-			internal;
-			try_files $uri $uri/ =404;
-		}
 
 		location /api/ {
 			proxy_pass http://backend:8080;
